--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,36 @@ body {
   color: brown;
   text-align: center;
 }
+
+#main-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  margin-top: 100px;
+  align-content: center;
+
+  #form-container {
+    width: 60%;
+    margin: auto;
+    justify-content: center;
+    text-align: left;
+  }
+
+  .form-group {
+    margin-bottom: 20px;
+  }
+
+  #vocab-container {
+    width: 90%;
+    display: flex;
+    flex-flow: row wrap;
+    text-align: center;
+    margin: auto;
+    justify-content: center;
+
+    .card {
+      width: 300px;
+      margin: 20px;
+    }
+  }
+}
