Completed filter buttons

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,11 @@ body {
   background-color: antiquewhite;
   color: brown;
   text-align: center;
+
+  .banner {
+    margin-top: 300px;
+    margin-bottom: 32px;
+  }
 }
 
 #main-container {
