--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,18 +6,24 @@ body {
   background-color: antiquewhite;
   color: brown;
   text-align: center;
+  background-image: url("https://user-images.githubusercontent.com/83558122/132958646-563f638c-d9cc-4a7b-aba9-96d5fe1d2dd8.jpg");
 
   .banner {
-    margin-top: 300px;
+    margin-top: 350px;
     margin-bottom: 32px;
+    color: white;
+    font-size: 50px;
   }
+}
+
+#create-entry {
+  font-size: 24px;
 }
 
 #main-container {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  margin-top: 100px;
   align-content: center;
 
   #form-container {
@@ -29,8 +35,28 @@ body {
 
   .form-group {
     margin-bottom: 20px;
+    color: white;
+    font-size: 18px;
   }
 
+  #filter-container {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  
+    #filter--CSS,
+    #filter--Firebase,
+    #filter--HTML,
+    #filter--Javascript {
+      margin: 20px 24px;
+      width: 150px;
+    }
+  }
+
+  #sort-btn {
+    background-color: white;
+    color: black;
+  }
+  
   #vocab-container {
     width: 90%;
     display: flex;
@@ -42,6 +68,11 @@ body {
     .card {
       width: 300px;
       margin: 20px;
+    }
+
+    #time {
+      font-size: 12px;
+      margin-top: 10px;
     }
   }
 }
